# economancy

./: .gitignore  README.md
economancy/: .#MCTS.hs  ABSTRACTION.org  CHANGELOG.md  README.org  abstraction.md  compile.sh  economancy.cabal
economancy/economancy-x86_64-linux/: README.txt
economancy/src/: #MCTS.hs#  #MDP.hs#  .#API.hs  .#MDP.hs  API.hs  Cards.hs  GameMachine.hs  MCTS.hs  MDP.hs  Main.hs  Player.hs  RunGame.hs  ValidMoves.hs  World.hs
gui/elm-stuff/0.19.1/: Main.elmi  Main.elmo
gui/src/: Main.elm  Model.elm
