cabal-version:       2.2

name:                economancy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/economancy#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable economancy
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Cards,
                       World,
                       Player,
                       GameMachine,
                       API
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       containers,
                       text,
                       aeson-pretty,
                       bytestring
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
